@@ -8,7 +8,7 @@
 #------------------------------------------------------------------------------------------------------
 ##### Language/Regional Options #####
 # Locale: eg: "en_GB.UTF-8" / "de_DE.UTF-8" | One entry and UTF-8 ONLY!
-AUTO_SETUP_LOCALE=en_GB.UTF-8
+AUTO_SETUP_LOCALE=C.UTF-8
 
 # Keyboard Layout eg: "gb" / "us" / "de" / "fr"
 AUTO_SETUP_KEYBOARD_LAYOUT=gb
