@@ -2152,7 +2152,7 @@ Current setting: $user_frequency_min_text" && G_CONFIG_INJECT 'CONFIG_CPU_MIN_FR
 
 					done
 
-					G_WHIP_MENU_ARRAY=()
+					G_WHIP_MENU_ARRAY=('C.UTF-8' ': default')
 					while read -r line
 					do
 
