@@ -131,7 +131,7 @@
 		else
 
 			local locale_current=$(sed -n '/^[[:blank:]]*AUTO_SETUP_LOCALE=/{s/^[^=]*=//p;q}' /boot/dietpi.txt)
-			local text_update_available_date=$(LC_ALL=${locale_current:-en_GB.UTF-8} date +"%R - %a %x")
+			local text_update_available_date=$(LC_ALL=${locale_current:-C.UTF-8} date +"%R - %a %x")
 
 		fi
 
