@@ -145,7 +145,7 @@ $(ps f -eo pid,user,tty,cmd | grep -i '[d]ietpi')"; then
 		disable_error=1 G_CHECK_VALIDINT "$HIERARCHY" 0 && export HIERARCHY=$((HIERARCHY+1)) || export HIERARCHY=0
 
 		# Set locale for scripts to prevent incorrect scraping due to translated command outputs
-		export LC_ALL='en_GB.UTF-8'
+		export LC_ALL='C.UTF-8'
 
 		# Declare exit trap, that runs on EXIT signal, which includes INT (interruption) and TERM (kill)
 		G_EXIT(){
