@@ -69,8 +69,8 @@ $FP_SCRIPT	passwords		NULL=Prompt user to change DietPi related passwords | X=op
 
 			# List of locales to generate, used by: dpkg-reconfigure => locale-gen
 			echo "$INPUT_MODE_VALUE UTF-8" > /etc/locale.gen
-			# - Add en_GB.UTF-8 back in, if not chosen, as DietPi scripts require it
-			[[ $INPUT_MODE_VALUE != 'en_GB.UTF-8' ]] && echo 'en_GB.UTF-8 UTF-8' >> /etc/locale.gen
+			# - Add C.UTF-8 back in, if not chosen, as DietPi scripts require it
+			[[ $INPUT_MODE_VALUE != 'C.UTF-8' ]] && echo 'C.UTF-8 UTF-8' >> /etc/locale.gen
 
 			# Remove current defaults, will be recreated by dpkg-reconfigure with: LANG=<first /etc/locale.gen entry>
 			[[ -f '/etc/default/locale' ]] && rm /etc/default/locale
@@ -79,7 +79,7 @@ $FP_SCRIPT	passwords		NULL=Prompt user to change DietPi related passwords | X=op
 			G_EXEC dpkg-reconfigure -f noninteractive locales
 
 			# Reassign override locale to current script, as in case of wrong locale variables update-locale command will produce ugly errors
-			export LC_ALL='en_GB.UTF-8'
+			export LC_ALL='C.UTF-8'
 
 			# Add new override locale to /etc/default/locales which is effective on next shell session (logout+in/reboot)
 			update-locale "LC_ALL=$INPUT_MODE_VALUE"
