@@ -121,6 +121,15 @@ _EOF_
 
 	fi
 
+	# Pre-v6.29: Assure that C.UTF-8 locale is available
+	if ! locale -a | grep -qiE '^C.UTF-?8'; then
+
+		apt-get -qq install --reinstall locales libc-bin
+		# libc-bin ships C.UTF-8 as static locale already but let's add it to memory-mapped archive as well
+		localedef -i C -f UTF-8 C.UTF-8
+
+	fi
+
 	# Import DietPi-Globals --------------------------------------------------------------
 	/boot/dietpi/func/dietpi-obtain_hw_model # Always update
 	. /boot/dietpi/func/dietpi-globals
@@ -255,8 +264,8 @@ _EOF_
 			# locale rework/reset: https://github.com/MichaIng/DietPi/issues/1430#issuecomment-364763302
 			[[ -f '/etc/environment' ]] && mv /etc/environment /mnt/dietpi_userdata/environment.bak
 			> /etc/environment
-			/boot/dietpi/func/dietpi-set_software locale en_GB.UTF-8
-			G_WHIP_MSG '[ INFO ] Locales reset\n\nTo resolve broken locales, they have been reset to "en_GB.UTF-8".\n\nIf you had a different locale configured on this system, please use "dietpi-config" at a later date to re-configure.\n\nIn relation to that, DietPi does not use "/etc/environment" anymore, thus it is cleaned. In case you manually edited it, a backup was created: /mnt/dietpi_userdata/environment.bak'
+			/boot/dietpi/func/dietpi-set_software locale C.UTF-8
+			G_WHIP_MSG '[ INFO ] Locales reset\n\nTo resolve broken locales, they have been reset to "C.UTF-8".\n\nIf you had a different locale configured on this system, please use "dietpi-config" at a later date to re-configure.\n\nIn relation to that, DietPi does not use "/etc/environment" anymore, thus it is cleaned. In case you manually edited it, a backup was created: /mnt/dietpi_userdata/environment.bak'
 			#------------------------------------------------------------------------------
 			# Removed control from DietPi-Services: https://github.com/MichaIng/DietPi/issues/1501
 			systemctl enable --now dnsmasq 2> /dev/null
