@@ -233,6 +233,14 @@ Package: wireguard wireguard-dkms wireguard-tools\nPin: release n=bullseye\nPin-
 
 	fi
 	#-------------------------------------------------------------------------------
+	# Pre-patch 21: Assure C.UTF-8 locale being available
+	if ! locale -a | grep -qiE '^C.UTF-?8'; then
+
+		echo -e '\e[90m[\e[0m INFO \e[90m]\e[0m Pre-patch 21 | Compile C.UTF-8 locale as new DietPi default'
+		localedef -i C -f UTF-8 C.UTF-8 || exit 21
+
+	fi
+	#-------------------------------------------------------------------------------
 	# Finished
 	exit 0
 	#-------------------------------------------------------------------------------
